--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                  <div class=" web1">
                    <img src="img/proj-1.png">
                    <div class="text-center mt-4">
-                    <p>사이트:마틸라<br>침구류를 파는 사이트다 보니<br>깔끔함과 단조로운 느낌으로 전체적인<br>디자인을 구성하였음<br></p>
+                    <p>사이트:마틸라<br>침구류를 파는 사이트다 보니 깔끔함과 단조로운 느낌으로 전체적인 디자인을 구성하였음<br></p>
                     <a class="btn btn-xl btn-outline-light" href="프로젝트1/index.html" target="_blank">
                        
                         <i class="fas fa-download me-2"></i>
@@ -204,7 +204,7 @@
 
                     <img src="img/proj-2.png">
                     <div class="text-center mt-4">
-                        <p>사이트:아이리버<br>고급스럽고 정돈된 느낌을<br>주기위해 검정색과 최근 유행<br>하는 방식으로 전체적인 디자인을 꾸림</p>
+                        <p>사이트:아이리버<br>고급스럽고 정돈된 느낌을 주기위해 검정색과 최근 유행 하는 방식으로 전체적인 디자인을 꾸림</p>
                         <a class="btn btn-xl btn-outline-light" href="프로젝트2/index.html" target="_blank">
                             <i class="fas fa-download me-2"></i>
                             프로젝트2번 
