--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                  <div class=" web1">
                    <img src="img/proj-1.png">
                    <div class="text-center mt-4">
-                    <p>사이트:마틸라<br>침구류를 파는 사이트다 보니 깔끔함과 단조로운 느낌으로 전체적인 디자인을 구성하였음<br></p>
+                    <p>사이트:마틸라<br>침구류를 파는 사이트다 보니 아늑하고 깔끔함과 단조로운 느낌으로 전체적인 디자인을 구성하였음<br></p>
                     <a class="btn btn-xl btn-outline-light" href="프로젝트1/index.html" target="_blank">
                        
                         <i class="fas fa-download me-2"></i>
