--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="img/face.1.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="img/bb.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">김창한의 포토폴리오</h1>
                 <!-- Icon Divider-->
