--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <div class="divider-custom-line"></div>
                 </div>
             <div class="bba">
-            <img class="abb" src="img/aboutme.jpg">
+            <img class="abb" src="img/ab1.jpg">
+            <img class="abb" src="img/ab2.jpg">
             </div>
             <div class="container">
                 <!-- Portfolio Section Heading-->
