--- a/프로젝트2/index.html
+++ b/프로젝트2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" cosntent="width=device-width, initial-scale=1.0">
     <title>프로젝트 2 번 아이리버 메인 </title>
     <link href="style.css" rel="stylesheet" type="text/css">
     
@@ -61,7 +61,7 @@
         <h1>NEW product</h1>
         <div class="item">
             <div>
-                <div clas="mu"><img src="img/f-1.png"></div>
+                <div class="mu"><img src="img/f-1.png"></div>
                 <div class="item_box_text">
                     <h2>아이 스키어</h2>
                     <p>블루투스 이어폰<br><br>차원이 다른 음질을 만나보세요!</p>
