--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                     <img src="img/proj-2.png">
                     <div class="text-center mt-4">
-                        <p>사이트:아이리버<br>고급스럽고 정돈된 느낌을 주기위해 검정색과 최근 유행 하는 방식으로 전체적인 디자인을 꾸림</p>
+                        <p>사이트:아이리버<br>고급스럽고 정돈된 느낌을 주기위해 검정색과 최근 유행 하는 방식으로 전체적인 디자인을 구성 하였음</p>
                         <a class="btn btn-xl btn-outline-light" href="프로젝트2/index.html" target="_blank">
                            
                             프로젝트2번 
